<resources>
    <string name="app_name">VocabVision</string>
    
    <!-- Gemini API 키는 local.properties 또는 BuildConfig를 통해 안전하게 관리됩니다. -->
    <string name="refresh_recognition">Refresh recognition</string>
    <string name="type_a_message">Type a message...</string>
    <string name="voice_input">Voice input</string>
    <string name="send_message">Send message</string>
    <string name="text_to_speech">Text to speech</string>
</resources>
